--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=EazySchoolWebApp
 spring.thymeleaf.cache=false
 
+spring.datasource.username=root
+spring.datasource.password=Legend_2006
+spring.datasource.url=jdbc:mysql://localhost:3306/eazyschool
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
